# stockscreener

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  live_test.json  pyproject.toml
backend/: check_indexes.py  create_active_index.py  run_ingestion.py  run_pipeline.py
backend/api/: __init__.py  main.py  responses.py
backend/qsde/: __init__.py
backend/scripts/: audit_db.py  clean_universe.py  compute_factors.py  compute_rule_ic.py  compute_rule_signals.py  daily_eod.py  fix_misaligned_metas.py  kite_daily_refresh.py  kite_ingest.py  kite_login.py  kite_seed_ohlcv.py  kite_stream.py  live_watch.py  precision_audit.py  print_research_json.py  reevaluate_oos.py  refresh_india_data.py  register_daily_task.ps1  register_weekly_drift_task.ps1  retrain.py  run_daily_eod.ps1  run_signal_loop.py  run_weekly_drift.ps1  seed_demo_session.py  simulate_strategies.py  stress_test_intraday.py  test_db.py  test_research_endpoints.py  upgrade_universe.py  verify_kei_e2e.py  verify_ml_train.py  weekly_drift.py
backend/tests/: test_afml_triplet.py  test_budget_screener.py  test_india_data.py  test_intraday_microstructure.py  test_intraday_signal.py  test_live_engine.py  test_live_watch_state.py  test_macro_sentiment.py  test_ml_promotion.py  test_order_tickets.py  test_paper_journal.py  test_paper_live.py  test_patterns.py  test_regime_engine.py  test_rule_validation.py  test_rules.py  (+1 more)
docs/: AUDIT_v1.md  MIGRATIONS.md
frontend/: package-lock.json  package.json
infra/: init.sql
scripts/: README.md  rename_to_stoxy.ps1  restart_full.ps1  seed.ps1  setup.ps1  smoke_test.ps1  start.ps1  start_live_stream.ps1  stop.ps1
(+144 files in other folders)
