[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsde"
version = "0.1.0"
description = "Quantitative Stock Decision Engine — Multi-factor ML signal generation for Indian equities"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Akshat"}]

dependencies = [
    # ── Core ──
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests>=2.32",

    # ── Data ──
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pyarrow>=16.0",

    # ── Database ──
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",

    # ── ML ──
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "optuna>=3.6",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "shap>=0.45",

    # ── Task Queue ──
    "celery[redis]>=5.4",

    # ── Monitoring ──
    "mlflow>=2.14",

    # ── Notifications ──
    "python-telegram-bot>=21.0",

    # ── Broker / Live Data ──
    "kiteconnect>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
